Add bulk discount create method

--- a/app/views/merchants/bulk_discounts/index.html.erb
+++ b/app/views/merchants/bulk_discounts/index.html.erb
@@ -4,6 +4,8 @@
   <h1><%= @merchant.name %> Discounts</h1>
 </header>
 
+<%= link_to "New Bulk Discount", new_merchant_bulk_discount_path %>
+
 <h2>Bulk discounts for this merchant:</h2>
 <div id='bulk-discounts'>
   <table>
