--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -21,6 +21,8 @@
     <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 
     <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %></p>
+    <p>Total Discount: <%= number_to_currency(@invoice.total_discount) %> </p>
+    <p>Total Profit: <%= number_to_currency(@invoice.total_revenue - @invoice.total_discount) %> </p>
 
     <h2>Customer:</h2>
     <div id='admin_invoice_customer'>
